# unittest_and_import_structure

./: Conda_instructions.txt  LICENSE  README.md  Tests.py  conda_instructions.txt  environment.yml  function_import.py  main_script.py  pyproject.toml
Application/: First.py  First_script.py  Second.py  Second_script.py  __init__.py  main.py  print_functions.py  setup.cfg
Application/package/: Fourth.py  Fourth_script.py  Third.py  Third_script.py  __init__.py
Application/package/subpackage/: Fifth.py  Fifth_script.py  Sixth.py  Sixth_script.py  __init__.py
Tests/: Tests_in_folder.py
tests/: test_main_functions.py  testing_with_no_pyprojecttoml.py  testing_with_pyprojecttoml.py
tests_folder/: test_functions.py
